<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tour"
            android:icon="@drawable/placeholder"
            android:title="@string/tour_campus" />
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/resort"
            android:title="@string/nearby_hotels" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/restaurant"
            android:title="@string/nearby_restaurant" />
    </group>

    <item
        android:layout_height="wrap_content"
        android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/arroba"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/telephone"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
