<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_dialog"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/imagedialog"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/image_dialog">

            <TextView
                android:id="@+id/textView_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:text="@string/textview"
                android:textAppearance="@android:style/TextAppearance.Material.Headline" tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/description_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_dialog"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:id="@+id/hist_dialog_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_dialog"
                android:text="@string/history"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                tools:targetApi="lollipop"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:id="@+id/history_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hist_dialog_header"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:lineSpacingExtra="5dp"/>

            <TextView
                android:id="@+id/triv_dialog_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/history_dialog"
                android:text="@string/trivia"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                tools:targetApi="lollipop"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trivia_dialog"
                android:layout_below="@id/triv_dialog_header"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:lineSpacingExtra="5dp"/>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>

</RelativeLayout>